--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 
 .image {
     object-fit: cover;
-    height: 200px;
-    width: 200px;
+    height: 220px;
+    width: 230px;
 }
 
 .counter-clock {
@@ -43,6 +43,22 @@
 .content {
     display: flex;
     flex-direction: column;
-    margin: 20px 10px;
+    margin: 15px 10px;
     max-width: calc(70vw/2);
+    width: 100%;
+}
+
+.content h3 {
+    text-transform: uppercase;
+    color: #2C75A9;
+    margin-bottom: 5px;
+}
+
+.content h5 {
+    text-transform: capitalize;
+}
+
+.content p{
+    padding: 10px;
+    font-size: 14px;
 }
