--- a/style.css
+++ b/style.css
@@ -56,3 +56,30 @@
     padding: 10px;
     font-size: 14px;
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 80vw;
+    }    
+}
+
+@media screen and (max-width: 425px) {
+
+    .container {
+        width: 90vw;
+        display: grid;
+        grid-template-columns: auto;
+    }
+    .content {
+        margin: 15px 5px;
+        max-width: 100%;
+    }
+
+    .content p {
+        padding: 5px;
+    }
+    .image {
+        margin: auto;
+        width: 90%;
+    }
+}
