--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1rem;
 }
 
 .container {
@@ -12,6 +13,7 @@
     background-color: #F1F5F8;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .image {
